--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "ejs": "~2.3.1",
     "express": "~4.12.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "mongodb": "1.4.15",
+    "express-session": "1.9.1",
+    "connect-mongo": "0.4.1"
   }
 }
