--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.1",
-    "express": "~4.12.4",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
+    "express": "4.10.2",
+    "body-parser": "1.9.0",
+    "cookie-parser": "1.3.3",
+    "morgan": "1.3.1",
+    "serve-favicon": "2.1.5",
+    "ejs": "1.0.0",
     "mongodb": "1.4.15",
     "express-session": "1.9.1",
-    "connect-mongo": "0.8.0",
-    "connect-flash": "0.1.1"
+    "connect-flash": "0.1.1",
+    "connect-mongo": "0.4.1"
   }
 }
